  pressed while the current directory was a file system root
- Double-click on directory bug in 'save as' dialog box fixed yet again
- The 'New Directory' command didn't appear in the 'More' menu of the
  VFS browser
- Closing the global options dialog box while a VFS browser was open
  would reload the current directory twice

* Version 2.6pre3

+ New Features

- Window docking added to the core. This allows plugins and other windows
  to be 'docked' into views. By default, all dockable windows are shown
  in their own frames. This can be changed in Utilities->Global Options->
  Docking. This obsoletes the PluginHolder plugin.

+ Enhancements

- Previously, buffer closing and search & replace would block the GUI
  until all pending I/O was complete. Now, these commands only do it if
  it is really necessary
  the buffer _being closed_ is currently being loaded or saved
- If the default edit mode is not 'text', *.txt files are now opened in
  text mode anyway
- jEdit now remembers all FTP passwords until it is quit. To force it
  to forget passwords while it is still running, invoke Utilities->Forget
  Remote Passwords
- More VFS code cleanups
- Documentation updates

+ Bug Fixes

- Double-clicking on a directory in the 'save as' dialog box did not have
  the desired effect (since 2.6pre2)
- On some systems, File.list(), for whatever reason, returns files in the
  list, which return false when exists() is called on them. This caused NPE's
  (since 2.6pre2)
- The VFS browser would throw 'VFS session in use' errors after the
  Global Options dialog box was closed (since 2.6pre2)
- The 'Add to Favorites' button in the VFS browser would throw an NPE if the
  tree view was active (since 2.6pre2)
- The FTP VFS now resolves symlinks, so links to directories should no
  longer show up as plain files in the browser
- The DirectoryListSet would reject directories whose names didn't match
  the file name filter, and not check any files within them (since 2.6pre2)